<resources>
    <string name="app_name">Readed</string>
    <string name="greetings">Welcome to Readed!</string>
    <string name="easyWay">Continue as a Guest</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logInActivity">Log in</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Your username: </string>
    <string name="password">Your password: </string>
    <string name="coninue">Continue</string>

    <string name="confirmation_button">Got it!</string>
    <string name="emptyInputTitle">Wrong input!</string>
    <string name="emptyInputMessage">Name and Password must be non-empty</string>
    <string name="nameKey">name</string>
    <string name="passwordKey">password</string>
    <string name="user_exists">We have user remembered, do you want to skip logging in?</string>
    <string name="skip">Skip</string>
    <string name="unskip">Don\'t skip</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="nameSurname">nameSurnamePreferences</string>
    <string name="passwords_not_equal">Passwords are not equal!</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>