<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/meatlicSeaWeed"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity"
        android:screenOrientation="portrait">

        <FrameLayout
            android:id="@+id/settingsFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:visibility="gone" />

        <TextView
            android:id="@+id/settings"
            style="@style/TextTheme"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/info_shape"
            android:gravity="center"
            android:onClick="onSettingsListener"
            android:text="S"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.038" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextTheme"
            android:layout_width="201dp"
            android:layout_height="102dp"
            android:text="@string/greetings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.138" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/ButtonTheme"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_form"
            android:onClick="signUpListener"
            android:text="@string/signUp"
            app:layout_constraintBottom_toTopOf="@+id/logInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/logInButton"
            style="@style/ButtonTheme"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_form"
            android:text="@string/logIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="logInListener"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <Button
            android:id="@+id/guestButton"
            style="@style/NextButtonTheme"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/next_button"
            android:text="@string/easyWay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInButton" />

        <TextView
            android:id="@+id/info"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="i"
            style="@style/TextTheme"
            android:background="@drawable/info_shape"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.038"
            android:onClick="onInfoListener"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="303dp"
            android:layout_height="218dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/signUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsFragment"
            app:srcCompat="@mipmap/beats" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>